// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderReport > orb-ball.trace.json.gz renders a stable --debug report 1`] = `
"perftale  orb-ball.trace.json.gz

VERDICT
  60fps, 0 dropped frames — running close to budget
  bound    animation · 96% of main-thread frame time
  hotspot  sampleHeight  terrain/elevationField.ts:138 · 11ms self
  notes
    • React: 1023 component renders across 10 components (134ms, React DevTools timing).
      Most-rendered: ForwardRef(motion.div) ×381 — frequent re-renders are the usual
      culprit; check memoization / state placement. Timings include React DevTools
      recording overhead — capture without DevTools for true frame cost.
    • Dev build detected (React dev runtime) — record a production build for
      representative numbers.
    • Browser extensions were active during capture — engine/native time is inflated.
    • GC pressure: 5 scavenges (5.5/s) + 1 mark-compact cost 26ms of main-thread pauses.
      Hottest JS before scavenges (heuristic): _getGlobalBoundsRecursive — likely high
      allocation. Reduce per-frame allocations (pool/reuse objects); confirm with a heap
      allocation profile.
    • Forced synchronous layout: 60 forced reflows (12 layout + 48 style recalc, 6ms) — JS
      read layout geometry mid-frame, forcing the browser to flush layout inside script.
      That time is charged to script, so ~6ms of the 'animation' bound is synchronous
      layout, not animation work. Hottest JS in the run-up (heuristic): resetTransform —
      batch DOM reads before writes (read all geometry first, then write).

SIZE  noise reduction
  28,353 events → 28,075 kept (99.0%), 278 noise dropped (1.0%)

FRAMES  smoothness
  refresh       60Hz · 16.67ms budget · detected, 100% confidence
  warmup        first 412ms excluded (profiling overhead)
  window        1.07s analyzed
  presented     65 frames · 60.7 fps avg, incl. idle vsyncs
  dropped       0 frames · 0.0% of attempted
  largest gap   19.7ms at 0.42s · idle — no long task
  pipeline lat  p50 40.7ms / p95 41.6ms / max 57.4ms (latency, not frame interval)

  main-thread frame time — where the budget goes
     time  share  phase
  569.7ms    96%  animation / rAF callbacks
    6.6ms     1%  update layers
    6.1ms     1%  pre-paint
    3.4ms     1%  style recalc
    3.1ms     1%  layout
    2.6ms     0%  paint
    0.5ms     0%  compositing inputs
    0.4ms     0%  composite commit
    0.1ms     0%  input handlers

REFLOW  forced synchronous layout
  12 forced layouts + 48 style recalcs — 5.8ms total
  ~0.9/frame

  run-up culprits — JS hottest just before forced layouts; a heuristic, batch reads before writes
  run-up  share       function                          location
   1.6ms    38%       resetTransform                    deps/motion_react.js:7720
   0.3ms     8%       exports.jsxDEV                    deps/react_jsx-dev-runtime.js:239
   0.3ms     6%       commitTextUpdate                  deps/react-dom_client.js:15894
   0.2ms     4%       prepareFreshStack                 deps/react-dom_client.js:12095
   0.2ms     4%       flushSpawnedWork                  deps/react-dom_client.js:12967
   0.1ms     3%       exports.jsx                       deps/chunk-ESQI3SWO.js:239
   0.1ms     3%       processBatch                      deps/motion_react.js:411
   0.1ms     2%       exports.createElement             deps/chunk-D5R4NKOJ.js:761
   0.1ms     2%       updateVirtualChildrenRecursively  build/installHook.js:1
   0.1ms     2%       resetTransform                    deps/motion_react.js:6929

  forced layouts
    0.1ms  at 0.42s · style
    0.4ms  at 0.44s · layout
    0.0ms  at 0.44s · style
    0.1ms  at 0.46s · style
    0.1ms  at 0.47s · style
    0.2ms  at 0.49s · layout
    0.1ms  at 0.50s · style
    0.1ms  at 0.51s · style
    0.0ms  at 0.53s · style
    0.1ms  at 0.55s · style
    0.1ms  at 0.56s · style
    0.2ms  at 0.59s · layout
    0.0ms  at 0.59s · style
    0.1ms  at 0.63s · style
    0.1ms  at 0.64s · style
    0.2ms  at 0.66s · layout
    0.0ms  at 0.66s · style
    0.1ms  at 0.68s · style
    0.1ms  at 0.71s · style
    0.1ms  at 0.73s · style
    0.1ms  at 0.76s · style
    0.2ms  at 0.78s · layout
    0.1ms  at 0.78s · style
    0.1ms  at 0.79s · style
    0.1ms  at 0.83s · style
    0.1ms  at 0.84s · style
    0.2ms  at 0.86s · layout
    0.1ms  at 0.86s · style
    0.1ms  at 0.88s · style
    0.1ms  at 0.91s · style
    0.1ms  at 0.93s · style
    0.1ms  at 0.96s · style
    0.2ms  at 0.98s · layout
    0.1ms  at 0.98s · style
    0.1ms  at 0.99s · style
    0.1ms  at 1.03s · style
    0.1ms  at 1.06s · style
    0.1ms  at 1.08s · style
    0.2ms  at 1.09s · layout
    0.1ms  at 1.09s · style
    0.1ms  at 1.11s · style
    0.1ms  at 1.14s · style
    0.2ms  at 1.17s · layout
    0.1ms  at 1.18s · style
    0.1ms  at 1.19s · style
    0.1ms  at 1.23s · style
    0.1ms  at 1.26s · style
    0.2ms  at 1.28s · layout
    0.0ms  at 1.28s · style
    0.1ms  at 1.31s · style
    0.1ms  at 1.33s · style
    0.1ms  at 1.34s · style
    0.2ms  at 1.37s · layout
    0.1ms  at 1.37s · style
    0.1ms  at 1.39s · style
    0.1ms  at 1.42s · style
    0.1ms  at 1.44s · style
    0.2ms  at 1.47s · layout
    0.0ms  at 1.48s · style
    0.1ms  at 1.49s · style

GC PRESSURE  V8 garbage-collection pauses
  5 scavenges (5.5/s, 18ms) + 1 mark-compact (9ms) — 26ms of main-thread pauses

  suspected allocators — JS hottest just before scavenges; a heuristic, confirm with a heap profile
  pre-gc  share       function                    location
   6.8ms     6%       _getGlobalBoundsRecursive   deps/chunk-VTQOOOML.js:661
   5.7ms     5%       updateLayout                deps/@pixi_layout.js:481
   4.8ms     4%  APP  sampleHeight                terrain/elevationField.ts:138
   4.4ms     4%       updateTransformAndChildren  deps/chunk-OKHOTB3R.js:735
   3.8ms     3%       collectRenderables          deps/chunk-VTQOOOML.js:419
   3.1ms     3%  APP  (anonymous)                 terrain/TerrainSpriteLayer.tsx:190
   2.6ms     2%       isEarHashed                 deps/chunk-KZO5MPJJ.js:115
   2.6ms     2%  APP  positionBlade               terrain/TerrainSpriteLayer.tsx:233
   2.3ms     2%       sortLinked                  deps/chunk-KZO5MPJJ.js:258
   1.8ms     1%       exports.jsxDEV              deps/react_jsx-dev-runtime.js:239

  longest pauses
    8.5ms  at 0.51s · mark-compact
    4.3ms  at 0.45s · scavenge
    3.5ms  at 1.36s · scavenge
    3.4ms  at 1.15s · scavenge
    3.3ms  at 0.73s · scavenge
    3.3ms  at 0.93s · scavenge

REACT  component renders, via React DevTools
  1023 renders across 10 components · 133.7ms wall-clock
    self  renders  component
  55.4ms     ×381  ForwardRef(motion.div)
  32.4ms      ×96  CreaturePerformanceTable
  13.8ms      ×48  StatsColumn
   9.0ms      ×85  Button
   7.7ms      ×99  MeasureLayout
   6.1ms      ×95  TelemetryStatsTable
   4.3ms      ×96  LayoutGroup
   2.7ms      ×27  MeasureLayoutWithContext
   1.8ms      ×48  GridEl
   0.5ms      ×48  TopLeft

JS  self-time by function
  active CPU 747ms: 282ms JS / 432ms engine+native / 34ms GC (idle 338ms)
    self  share       function                     location
  16.6ms     6%       _getGlobalBoundsRecursive    deps/chunk-VTQOOOML.js:661
  13.8ms     5%       updateLayout                 deps/@pixi_layout.js:481
  11.5ms     4%       updateTransformAndChildren   deps/chunk-OKHOTB3R.js:735
  10.9ms     4%  APP  sampleHeight                 terrain/elevationField.ts:138
   8.3ms     3%       collectRenderables           deps/chunk-VTQOOOML.js:419
   7.8ms     3%  APP  (anonymous)                  terrain/TerrainSpriteLayer.tsx:190
   7.3ms     3%       isEarHashed                  deps/chunk-KZO5MPJJ.js:115
   7.0ms     2%  APP  positionBlade                terrain/TerrainSpriteLayer.tsx:233
   4.7ms     2%       sortLinked                   deps/chunk-KZO5MPJJ.js:258
   3.9ms     1%       collectRenderablesSimple     deps/chunk-VTQOOOML.js:3112
   3.7ms     1%       exports.jsxDEV               deps/react_jsx-dev-runtime.js:239
   3.6ms     1%       updateRenderGroupTransforms  deps/chunk-OKHOTB3R.js:688
   3.3ms     1%       measureHostInstance          build/installHook.js:1
   3.2ms     1%  APP  (anonymous)                  terrain/TerrainSpriteLayer.tsx:183
   3.1ms     1%       set                          deps/chunk-VTQOOOML.js:93
   3.0ms     1%       emit                         deps/chunk-VTQOOOML.js:2444
   3.0ms     1%       break                        deps/chunk-OKHOTB3R.js:1075
   2.9ms     1%       _updateSize                  deps/@pixi_layout.js:446
   2.7ms     1%  APP  isCircleInsidePerimeter      shared/boardShape.ts:302
   2.5ms     1%  APP  (anonymous)                  creature/EntitySimRenderer.tsx:91
   2.4ms     1%  APP  t1                           camera/perspective.ts:275
   2.3ms     1%  APP  simpleHash                   utils/stateChecksum.ts:21
   2.2ms     1%       break                        deps/chunk-KZO5MPJJ.js:1374
   2.1ms     1%       getAttribute                 deps/chunk-D7CXWU2I.js:6321
   2.1ms     1%       prepareFreshStack            deps/react-dom_client.js:12095

scanned in 0.0s"
`;

exports[`renderReport > orb-ball.trace.json.gz renders a stable default report 1`] = `
"perftale  orb-ball.trace.json.gz

VERDICT
  60fps, 0 dropped frames — running close to budget
  bound    animation · 96% of main-thread frame time
  hotspot  sampleHeight  terrain/elevationField.ts:138 · 11ms self
  notes
    • React: 1023 component renders across 10 components (134ms, React DevTools timing).
      Most-rendered: ForwardRef(motion.div) ×381 — frequent re-renders are the usual
      culprit; check memoization / state placement. Timings include React DevTools
      recording overhead — capture without DevTools for true frame cost.
    • Dev build detected (React dev runtime) — record a production build for
      representative numbers.
    • Browser extensions were active during capture — engine/native time is inflated.
    • GC pressure: 5 scavenges (5.5/s) + 1 mark-compact cost 26ms of main-thread pauses.
      Hottest JS before scavenges (heuristic): _getGlobalBoundsRecursive — likely high
      allocation. Reduce per-frame allocations (pool/reuse objects); confirm with a heap
      allocation profile.
    • Forced synchronous layout: 60 forced reflows (12 layout + 48 style recalc, 6ms) — JS
      read layout geometry mid-frame, forcing the browser to flush layout inside script.
      That time is charged to script, so ~6ms of the 'animation' bound is synchronous
      layout, not animation work. Hottest JS in the run-up (heuristic): resetTransform —
      batch DOM reads before writes (read all geometry first, then write).

FRAMES  smoothness
  refresh      60Hz · 16.67ms budget · detected, 100% confidence
  warmup       first 412ms excluded (profiling overhead)
  window       1.07s analyzed
  presented    65 frames · 60.7 fps avg, incl. idle vsyncs
  dropped      0 frames · 0.0% of attempted
  largest gap  19.7ms at 0.42s · idle — no long task

  main-thread frame time — where the budget goes
     time  share  phase
  569.7ms    96%  animation / rAF callbacks
    6.6ms     1%  update layers
    6.1ms     1%  pre-paint
    3.4ms     1%  style recalc
    3.1ms     1%  layout
    2.6ms     0%  paint
    0.5ms     0%  compositing inputs
    0.4ms     0%  composite commit
    0.1ms     0%  input handlers

REFLOW  forced synchronous layout
  12 forced layouts + 48 style recalcs — 5.8ms total
  ~0.9/frame

  run-up culprits — JS hottest just before forced layouts; a heuristic, batch reads before writes
  run-up  share       function           location
   1.6ms    38%       resetTransform     deps/motion_react.js:7720
   0.3ms     8%       exports.jsxDEV     deps/react_jsx-dev-runtime.js:239
   0.3ms     6%       commitTextUpdate   deps/react-dom_client.js:15894
   0.2ms     4%       prepareFreshStack  deps/react-dom_client.js:12095
   0.2ms     4%       flushSpawnedWork   deps/react-dom_client.js:12967
  … and 5 more (--debug)

GC PRESSURE  V8 garbage-collection pauses
  5 scavenges (5.5/s, 18ms) + 1 mark-compact (9ms) — 26ms of main-thread pauses

  suspected allocators — JS hottest just before scavenges; a heuristic, confirm with a heap profile
  pre-gc  share       function                    location
   6.8ms     6%       _getGlobalBoundsRecursive   deps/chunk-VTQOOOML.js:661
   5.7ms     5%       updateLayout                deps/@pixi_layout.js:481
   4.8ms     4%  APP  sampleHeight                terrain/elevationField.ts:138
   4.4ms     4%       updateTransformAndChildren  deps/chunk-OKHOTB3R.js:735
   3.8ms     3%       collectRenderables          deps/chunk-VTQOOOML.js:419
  … and 5 more (--debug)

REACT  component renders, via React DevTools
  1023 renders across 10 components · 133.7ms wall-clock
    self  renders  component
  55.4ms     ×381  ForwardRef(motion.div)
  32.4ms      ×96  CreaturePerformanceTable
  13.8ms      ×48  StatsColumn
   9.0ms      ×85  Button
   7.7ms      ×99  MeasureLayout
   6.1ms      ×95  TelemetryStatsTable
   4.3ms      ×96  LayoutGroup
   2.7ms      ×27  MeasureLayoutWithContext
   1.8ms      ×48  GridEl
   0.5ms      ×48  TopLeft

JS  self-time by function
  active CPU 747ms: 282ms JS / 432ms engine+native / 34ms GC (idle 338ms)
    self  share       function                     location
  16.6ms     6%       _getGlobalBoundsRecursive    deps/chunk-VTQOOOML.js:661
  13.8ms     5%       updateLayout                 deps/@pixi_layout.js:481
  11.5ms     4%       updateTransformAndChildren   deps/chunk-OKHOTB3R.js:735
  10.9ms     4%  APP  sampleHeight                 terrain/elevationField.ts:138
   8.3ms     3%       collectRenderables           deps/chunk-VTQOOOML.js:419
   7.8ms     3%  APP  (anonymous)                  terrain/TerrainSpriteLayer.tsx:190
   7.3ms     3%       isEarHashed                  deps/chunk-KZO5MPJJ.js:115
   7.0ms     2%  APP  positionBlade                terrain/TerrainSpriteLayer.tsx:233
   4.7ms     2%       sortLinked                   deps/chunk-KZO5MPJJ.js:258
   3.9ms     1%       collectRenderablesSimple     deps/chunk-VTQOOOML.js:3112
   3.7ms     1%       exports.jsxDEV               deps/react_jsx-dev-runtime.js:239
   3.6ms     1%       updateRenderGroupTransforms  deps/chunk-OKHOTB3R.js:688
   3.3ms     1%       measureHostInstance          build/installHook.js:1
   3.2ms     1%  APP  (anonymous)                  terrain/TerrainSpriteLayer.tsx:183
   3.1ms     1%       set                          deps/chunk-VTQOOOML.js:93
  … and 10 more (--debug)"
`;

exports[`renderReport > pile-up-poker.trace.json.gz renders a stable --debug report 1`] = `
"perftale  pile-up-poker.trace.json.gz

VERDICT
  60fps, 3 dropped frames (3.9%) — worst freeze 48ms at 1.20s, blocked by a 65ms task
  bound    paint/composite · 61% of main-thread frame time
  hotspot  wrappedSelector  lib/createDraftSafeSelector.ts:7 · 1ms self
  notes
    • Dev build detected (React dev runtime) — record a production build for
      representative numbers.
    • Browser extensions were active during capture — engine/native time is inflated.
    • Large engine/native bucket (115ms) — much of it is console-instrumentation overhead
      from recording with DevTools attached; real app JS is 20ms.
    • Forced synchronous layout detected — 8 reflows, 2ms — but the run-up is dominated by
      a browser DevTools extension (measureHostInstance) reading component geometry: a
      capture artifact that won't occur in production. Re-capture with DevTools detached
      to measure your app's own forced reflow.

SIZE  noise reduction
  12,997 events → 12,727 kept (97.9%), 270 noise dropped (2.1%)

FRAMES  smoothness
  refresh       60Hz · 16.67ms budget · detected, 100% confidence
  warmup        first 199ms excluded (profiling overhead)
  window        1.20s analyzed
  presented     73 frames · 60.8 fps avg, incl. idle vsyncs
  dropped       3 frames · 3.9% of attempted
  worst freeze  47.9ms at 1.20s · 1 freeze · blocked by a 65ms task
  largest gap   31.3ms at 1.20s · main thread blocked by a 65ms task
  pipeline lat  p50 41.5ms / p95 58.2ms / max 91.3ms (latency, not frame interval)

  main-thread frame time — where the budget goes
   time  share  phase
  9.9ms    46%  composite commit
  4.8ms    22%  animation / rAF callbacks
  2.4ms    11%  paint
  1.6ms     7%  style recalc
  1.2ms     5%  layout
  1.0ms     5%  update layers
  0.6ms     3%  pre-paint
  0.1ms     1%  compositing inputs
  0.0ms     0%  input handlers

LONG TASKS  main-thread tasks over 50ms
  1 task, 65ms total
  65.4ms  at 1.20s  input event · scripting 65ms
                    hottest: memoized  deps/chunk-4T7UYGQA.js:534 · 2.4ms self

REFLOW  forced synchronous layout
  3 forced layouts + 5 style recalcs — 1.9ms total
  worst burst 4 in one call · ~0.1/frame

  run-up culprits — JS hottest just before forced layouts; a heuristic, batch reads before writes
  run-up  share       function                  location
   1.7ms    15%       measureHostInstance       build/installHook.js:1
   1.6ms    14%       memoized                  deps/chunk-4T7UYGQA.js:534
   0.8ms     7%       React.useCallback         deps/react-redux.js:1020
   0.6ms     5%       exports.jsxDEV            deps/react_jsx-dev-runtime.js:240
   0.5ms     5%       memoizedSelector          deps/react-redux.js:27
   0.4ms     3%       react-stack-bottom-frame  deps/react-dom_client.js:17471
   0.3ms     3%       getTypeSymbol             build/installHook.js:1
   0.3ms     2%       performAction             lmhkpmbekcpmknklioeibfkpmmfibljd/page.bundle.js:1
   0.2ms     2%       beginWork                 deps/react-dom_client.js:7545
   0.2ms     2%       updateFiberRecursively    build/installHook.js:1

  forced layouts
    0.2ms  at 1.21s · style
    0.1ms  at 1.23s · style
    0.1ms  at 1.23s · layout
    0.5ms  at 1.25s · style
    0.6ms  at 1.25s · layout
    0.2ms  at 1.27s · style
    0.2ms  at 1.27s · layout
    0.1ms  at 1.27s · style

JS  self-time by function
  active CPU 136ms: 20ms JS / 115ms engine+native / 0ms GC (idle 1062ms)
   self  share       function                  location
  2.4ms    12%       memoized                  deps/chunk-4T7UYGQA.js:534
  2.0ms    10%       measureHostInstance       build/installHook.js:1
  1.5ms     8%       React.useCallback         deps/react-redux.js:1020
  0.9ms     4%       pe                        inject/index.js:2110
  0.7ms     3%       exports.jsxDEV            deps/react_jsx-dev-runtime.js:240
  0.6ms     3%       memoizedSelector          deps/react-redux.js:27
  0.5ms     3%  APP  wrappedSelector           lib/createDraftSafeSelector.ts:7
  0.5ms     2%       getState                  deps/@reduxjs_toolkit.js:120
  0.4ms     2%       performAction             lmhkpmbekcpmknklioeibfkpmmfibljd/page.bundle.js:1
  0.4ms     2%       renderHTML                deps/chunk-PNI2FNV6.js:6065
  0.4ms     2%       react-stack-bottom-frame  deps/react-dom_client.js:17471
  0.3ms     2%  APP  t9                        deck/InnerPositioner.tsx:154
  0.3ms     1%       getTypeSymbol             build/installHook.js:1
  0.2ms     1%       O                         lmhkpmbekcpmknklioeibfkpmmfibljd/page.bundle.js:3
  0.2ms     1%  APP  t2                        deck/Pile.tsx:46
  0.2ms     1%       beginWork                 deps/react-dom_client.js:7545
  0.2ms     1%  APP  getWidth                  deck/deckSelectors.ts:15
  0.2ms     1%       updateFiberRecursively    build/installHook.js:1
  0.2ms     1%       setValueForStyle          deps/react-dom_client.js:2213
  0.2ms     1%       BC                        inline/injected.js:1
  0.2ms     1%       removeChild               deps/react-dom_client.js:13968
  0.2ms     1%  APP  getPileById               engine/stateToInputString.ts:5
  0.2ms     1%       keyframes                 deps/chunk-PNI2FNV6.js:1300
  0.2ms     1%       checkIfSnapshotChanged    deps/react-dom_client.js:4642
  0.2ms     1%       handlePressEvent          deps/chunk-PNI2FNV6.js:9162

  dropped-frame clusters
  1.22s–1.25s  3 frame(s)

scanned in 0.0s"
`;

exports[`renderReport > pile-up-poker.trace.json.gz renders a stable default report 1`] = `
"perftale  pile-up-poker.trace.json.gz

VERDICT
  60fps, 3 dropped frames (3.9%) — worst freeze 48ms at 1.20s, blocked by a 65ms task
  bound    paint/composite · 61% of main-thread frame time
  hotspot  wrappedSelector  lib/createDraftSafeSelector.ts:7 · 1ms self
  notes
    • Dev build detected (React dev runtime) — record a production build for
      representative numbers.
    • Browser extensions were active during capture — engine/native time is inflated.
    • Large engine/native bucket (115ms) — much of it is console-instrumentation overhead
      from recording with DevTools attached; real app JS is 20ms.
    • Forced synchronous layout detected — 8 reflows, 2ms — but the run-up is dominated by
      a browser DevTools extension (measureHostInstance) reading component geometry: a
      capture artifact that won't occur in production. Re-capture with DevTools detached
      to measure your app's own forced reflow.

FRAMES  smoothness
  refresh       60Hz · 16.67ms budget · detected, 100% confidence
  warmup        first 199ms excluded (profiling overhead)
  window        1.20s analyzed
  presented     73 frames · 60.8 fps avg, incl. idle vsyncs
  dropped       3 frames · 3.9% of attempted
  worst freeze  47.9ms at 1.20s · 1 freeze · blocked by a 65ms task
  largest gap   31.3ms at 1.20s · main thread blocked by a 65ms task

  main-thread frame time — where the budget goes
   time  share  phase
  9.9ms    46%  composite commit
  4.8ms    22%  animation / rAF callbacks
  2.4ms    11%  paint
  1.6ms     7%  style recalc
  1.2ms     5%  layout
  1.0ms     5%  update layers
  0.6ms     3%  pre-paint
  0.1ms     1%  compositing inputs
  0.0ms     0%  input handlers

LONG TASKS  main-thread tasks over 50ms
  1 task, 65ms total
  65.4ms  at 1.20s  input event · scripting 65ms
                    hottest: memoized  deps/chunk-4T7UYGQA.js:534 · 2.4ms self

REFLOW  forced synchronous layout
  3 forced layouts + 5 style recalcs — 1.9ms total
  worst burst 4 in one call · ~0.1/frame

  run-up culprits — JS hottest just before forced layouts; a heuristic, batch reads before writes
  run-up  share       function             location
   1.7ms    15%       measureHostInstance  build/installHook.js:1
   1.6ms    14%       memoized             deps/chunk-4T7UYGQA.js:534
   0.8ms     7%       React.useCallback    deps/react-redux.js:1020
   0.6ms     5%       exports.jsxDEV       deps/react_jsx-dev-runtime.js:240
   0.5ms     5%       memoizedSelector     deps/react-redux.js:27
  … and 5 more (--debug)

JS  self-time by function
  active CPU 136ms: 20ms JS / 115ms engine+native / 0ms GC (idle 1062ms)
   self  share       function                  location
  2.4ms    12%       memoized                  deps/chunk-4T7UYGQA.js:534
  2.0ms    10%       measureHostInstance       build/installHook.js:1
  1.5ms     8%       React.useCallback         deps/react-redux.js:1020
  0.9ms     4%       pe                        inject/index.js:2110
  0.7ms     3%       exports.jsxDEV            deps/react_jsx-dev-runtime.js:240
  0.6ms     3%       memoizedSelector          deps/react-redux.js:27
  0.5ms     3%  APP  wrappedSelector           lib/createDraftSafeSelector.ts:7
  0.5ms     2%       getState                  deps/@reduxjs_toolkit.js:120
  0.4ms     2%       performAction             lmhkpmbekcpmknklioeibfkpmmfibljd/page.bundle.js:1
  0.4ms     2%       renderHTML                deps/chunk-PNI2FNV6.js:6065
  0.4ms     2%       react-stack-bottom-frame  deps/react-dom_client.js:17471
  0.3ms     2%  APP  t9                        deck/InnerPositioner.tsx:154
  0.3ms     1%       getTypeSymbol             build/installHook.js:1
  0.2ms     1%       O                         lmhkpmbekcpmknklioeibfkpmmfibljd/page.bundle.js:3
  0.2ms     1%  APP  t2                        deck/Pile.tsx:46
  … and 10 more (--debug)"
`;
